crates/lash/tests/ui/session_turn_run_requires_scope.stderr
error[E0061]: this method takes 0 arguments but 1 argument was supplied
 --> tests/ui/session_turn_run_requires_scope.rs:5:58
  |
5 |     let _ = session.turn(lash::TurnInput::text("hello")).run(scope).await;
  |                                                          ^^^ ----- unexpected argument of type `ScopedEffectController<'_>`
  |
note: method defined here
 --> src/turn.rs
  |
  |     pub async fn run(self) -> Result<TurnOutput> {
  |                  ^^^
help: remove the extra argument
  |
5 -     let _ = session.turn(lash::TurnInput::text("hello")).run(scope).await;
5 +     let _ = session.turn(lash::TurnInput::text("hello")).run().await;
  |
